# fairpredictor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Run_fAIr_Predictor_in_benchmark_data.ipynb  binary.geojson  fAIr_Predictor.ipynb  fAIrpredictor_with_leafmap.ipynb  justfile  locust.py  main.py  pyproject.toml  pyproject.toml_backup  requirements.txt  run_predictor.py  setup.py  test.py  yolo-requirements.txt
.github/workflows/: build-and-push-on-release.yml  build-push-docker-on-master.yml  docker-image-build-publish.yml  docker-image.yml  pypi-upload.yml  unit-test.yml
API/: Dockerfile  Readme.md  main.py  requirements.txt
API/predictions/12114138-64d6-4cd3-beb7-967f81065ffb/results/geojson/: predictions.geojson
predictor/: __init__.py  app.py  downloader.py  georeferencer.py  models.py  multimasks2labels.py  prediction.py  raster2polygon.py  utils.py  vectorizer.py
predictor/yoloseg/: Readme.md  YOLOSeg.py  __init__.py  utils.py
src/predictor/: prediction.py
tests/: app_test.py  test_predict.py
